--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -8,12 +8,14 @@ menu:
   home: 首页
   archives: 归档
   categories: 分类
+  top: 阅读排行
   tags: 标签
   about: 关于
   search: 搜索
   schedule: 日程表
   sitemap: 站点地图
   commonweal: 公益 404
+  message: 留言板
 sidebar:
   overview: 站点概览
   toc: 文章目录
